# meatball

./: .gitignore  LICENSE  README.md  __init__.py  cli.py  evaluator.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
core/: __init__.py  context.py  engines.py  pipeline.py  plugins.py  preprocessor.py  sexpr_engine.py  standard_engines.py
integrations/: test_yaml_compare.py
meatball/: __init__.py  preprocessor.py
meatball/core/: evaluator.py  parser.py  preprocessor.py  registry.py
meatball/evaluator/: __init__.py  evaluator.py
meatball/integrations/: yaml_compare.py
meatball/parser/: parser.py
parser/: __init__.py
plugins/: __init__.py
tests/: test_evaluator.py  test_inline_macros.py  test_jq_macros.py  test_js_macros.py  test_pipeline.py  test_preprocessor.py
